Adiciono subir imagenes y modifico codigo

--- a/index.html
+++ b/index.html
@@ -86,6 +86,32 @@
                 <img src="capturas/conectar repositorio.png" alt="conectar repositorio a GitHub" class="tutorial-img">
                 <img src="capturas/subir git.png" alt="subir repositorio">
             </article>
+
+            <!-- Nuevo: Paso 5: Subir cambios al repositorio de GitHub -->
+            <article>
+                <h3>Paso 5: Subir Cambios al Repositorio en GitHub</h3>
+                <p>Si has hecho modificaciones adicionales en tu código y deseas subirlas a GitHub, debes seguir estos pasos:</p>
+                
+                <h4>1. Verificar el estado del repositorio</h4>
+                <p>Usa el siguiente comando para verificar los cambios que aún no se han preparado para commit:</p>
+                <pre><code>git status</code></pre>
+
+                <h4>2. Agregar los archivos modificados</h4>
+                <p>Para añadir todos los archivos modificados y nuevos al área de preparación (stage), usa:</p>
+                <pre><code>git add .</code></pre>
+
+                <h4>3. Hacer commit</h4>
+                <p>Luego, haz un commit de tus cambios con un mensaje claro y descriptivo:</p>
+                <pre><code>git commit -m "Descripción de los cambios realizados"</code></pre>
+
+                <h4>4. Subir los cambios a GitHub</h4>
+                <p>Finalmente, sube tus cambios a la rama correspondiente en GitHub con el siguiente comando:</p>
+                <pre><code>git push origin nombre-rama</code></pre>
+                <p>Asegúrate de reemplazar <em>nombre-rama</em> por el nombre de la rama en la que estás trabajando, por ejemplo <code>master</code> o <code>feature/nueva-funcionalidad</code>.</p>
+                <img src="capturas/subir cambios.png" alt="Subir cambios a GitHub" class="tutorial-img">
+            </article>
+
+
         </section>
 
     </main>
