Actualización de imágenes del primer bloque

--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
             <button class="dropdown-btn">Hardware</button>
             <div class="dropdown-content">
                 <p>El hardware es la parte física de una computadora o sistema electrónico. Incluye componentes como el procesador, la memoria RAM, el disco duro, y otros periféricos.</p>
+                <img src="imagenes/hardware.png" alt="Imagen de Hardware" class="tutorial-img">
             </div>
 
             <button class="dropdown-btn">Ábaco</button>
             <div class="dropdown-content">
                 <p>El ábaco es una herramienta de cálculo antigua utilizada en muchas culturas para realizar operaciones matemáticas como suma, resta, multiplicación y división.</p>
+                <img src="imagenes/abaco.png" alt="Imagen de Ábaco" class="tutorial-img">
             </div>
 
             <button class="dropdown-btn">Lógica Matemática</button>
             <div class="dropdown-content">
                 <p>La lógica matemática es un área de las matemáticas que estudia los principios y métodos de razonamiento. Incluye temas como la teoría de conjuntos, la lógica proposicional y la lógica de predicados.</p>
+                <img src="imagenes/logica.png" alt="Imagen de Lógica Matemática" class="tutorial-img">
             </div>
         </section>
     </main>
