Adiciono tutorial y capturas de pantalla

--- a/index.html
+++ b/index.html
@@ -77,9 +77,32 @@
                 <img src="capturas/hacer commit.png" alt="Hacer commits" class="tutorial-img">
             </article>
 
-            <!-- Paso 4: Subir el repositorio a GitHub -->
+            <!-- Paso 4: Crear un repositorio en GitHub -->
             <article>
-                <h3>Paso 4: Conectar a un Repositorio Remoto y Subir a GitHub</h3>
+                <h3>Paso 4: Crear un Repositorio en GitHub y Conectar el Repositorio Local</h3>
+
+                <!-- Subpaso 1: Entrar a GitHub -->
+                <h4>1. Entrar a GitHub</h4>
+                <p>Para comenzar, ve a <a href="https://github.com" target="_blank">github.com</a> e inicia sesión con tu cuenta. Si no tienes una cuenta, deberás registrarte primero.</p>
+                <img src="capturas/entrar a git.png" alt="Entrar a GitHub" class="tutorial-img">
+
+                <!-- Subpaso 2: Crear un nuevo repositorio -->
+                <h4>2. Crear un Nuevo Repositorio</h4>
+                <p>Una vez que estés en tu cuenta, haz clic en el botón <strong>"New repository"</strong> para crear un nuevo repositorio. Dale un nombre a tu repositorio y configura las opciones como prefieras.</p>
+                <img src="capturas/crear repositorio.png" alt="Crear un nuevo repositorio en GitHub" class="tutorial-img">
+                <p>Adicional te saldra un apartado donde le daras nombre a tu repositorio, y lo crearás</p>
+                <img src="capturas/crear repositorio1.png" alt="crear repositorio" class="tutorial-img">
+
+                <!-- Subpaso 3: Obtener el enlace del repositorio -->
+                <h4>3. Obtener el Enlace del Repositorio</h4>
+                <p>Después de crear el repositorio, se te mostrará la URL del repositorio. Copia esta URL, ya que la necesitarás para conectar tu repositorio local a GitHub.</p>
+                <img src="capturas/tomar link.png" alt="Obtener el enlace del repositorio en GitHub" class="tutorial-img">
+            </article>
+
+
+            <!-- Paso 5: Subir el repositorio a GitHub -->
+            <article>
+                <h3>Paso 5: Conectar a un Repositorio Remoto y Subir a GitHub</h3>
                 <p>Para conectar tu repositorio local con GitHub, debes agregar un remoto. Usa este comando, reemplazando el enlace por el de tu repositorio:</p>
                 <pre><code>git remote add origin https://github.com/tu-usuario/tu-repo.git</code></pre>
                 <p>Luego, sube los cambios a GitHub con:</p>
@@ -87,12 +110,12 @@
                 <pre><code>git push -u origin nombre-rama</code></pre>
                 <!-- Aquí puedes agregar una captura de pantalla -->
                 <img src="capturas/conectar repositorio.png" alt="conectar repositorio a GitHub" class="tutorial-img">
-                <img src="capturas/subir git.png" alt="subir repositorio">
+                <img src="capturas/subir git.png" alt="subir repositorio" class="tutorial-img">
             </article>
 
-            <!-- Nuevo: Paso 5: Subir cambios al repositorio de GitHub -->
+            <!-- Nuevo: Paso 6: Subir cambios al repositorio de GitHub -->
             <article>
-                <h3>Paso 5: Subir Cambios al Repositorio en GitHub</h3>
+                <h3>Paso 6: Subir Cambios al Repositorio en GitHub</h3>
                 <p>Si has hecho modificaciones adicionales en tu código y deseas subirlas a GitHub, debes seguir estos pasos:</p>
                 
                 <h4>1. Verificar el estado del repositorio</h4>
