--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>Luego, confirma los cambios con:</p>
                 <pre><code>git commit -m "Mensaje descriptivo"</code></pre>
                 <!-- Aquí puedes agregar una captura de pantalla -->
-                <img src="capturas/hacer commit.png" alt="Hacer commits" class="tutorial-img">
+                <img src="capturas/commit.png" alt="Hacer commits" class="tutorial-img">
             </article>
 
             <!-- Paso 4: Crear un repositorio en GitHub -->
